syntax = "proto3";

package common;

// 일반 패킷
message Packet{
    uint32 handlerId = 1;
    string userId = 2;
    string clientVersion = 3;    
    bytes payload = 4;
}

// Ping 메세지
message Ping{
    int64 timestamp = 1;
}